Avoid unnecessary pushes and allocations.